fix(Feedback): remove unexpected and too small clear button.

--- a/vtr-ui/src/app/components/feedback-form/feedback-form/feedback-form.component.scss
+++ b/vtr-ui/src/app/components/feedback-form/feedback-form/feedback-form.component.scss
@@ -237,6 +237,10 @@ $normalPadding: 2.4rem;
 
 		.user-email {
 			height: 6rem;
+
+			&::-ms-clear{
+				display: none;
+			}
 		}
 
 		.invalid-email {
